--- a/content/posts/20250627_idea.md
+++ b/content/posts/20250627_idea.md
@@ -72,4 +72,9 @@ Il faut être patient, prendre le temps de convaincre, écouter chaque membre de
 
 Il faut savoir abandonner son idée initiale. Et accueillir la meilleure version, multiforme, hybride, née du groupe.
 
+C'est un travail permanent. Même après des décénie à m'entrainer régulièrement à bien réagir aux idées, à les faire murir, il m'arrive chaque semaine de mal réagir.
+
 C’est difficile. Mais ça en vaut la peine. Toutes les plus grandes idées sont passées par là.
+
+
+
